--- a/zinc-manifest/Cargo.toml
+++ b/zinc-manifest/Cargo.toml
@@ -10,8 +10,7 @@ description = "The Zinc project manifest file"
 [dependencies]
 failure = "0.1"
 toml = "0.5"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 zinc-const = { path = "../zinc-const" }
