--- a/zargo/Cargo.toml
+++ b/zargo/Cargo.toml
@@ -26,12 +26,12 @@ rustc-hex = "2.1"
 toml = "0.5"
 Inflector = "0.11"
 
-tokio = "0.2"
+tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
 reqwest = "0.10"
 
-zksync = { git = "ssh://git@github.com/matter-labs/zksync-dev", branch = "dev" }
-zksync_types = { git = "ssh://git@github.com/matter-labs/zksync-dev", branch = "dev" }
-zksync_eth_signer = { git = "ssh://git@github.com/matter-labs/zksync-dev", branch = "dev" }
+zksync = { git = "ssh://git@github.com/matter-labs/zksync", branch = "dev" }
+zksync_types = { git = "ssh://git@github.com/matter-labs/zksync", branch = "dev" }
+zksync_eth_signer = { git = "ssh://git@github.com/matter-labs/zksync", branch = "dev" }
 num_old = { package = "num", version = "0.2.1" }
 
 zinc-logger = { path = "../zinc-logger" }
